sqlmap (0.6.3-1) stable; urgency=low

  * Major bug fix to correctly handle httplib.BadStatusLine exception;
  * Minor enhancement to support stacked queries which will be used
    sometimes by takeover functionality and time based blind SQL injection
    technique;
  * Minor enhancement to be able to specify the number of seconds to wait
    between each HTTP request;
  * Minor enhancement to be able to enumerate table columns and dump table
    entries, also when the database name is not provided, by using the
    current database on MySQL and Microsoft SQL Server, the 'public'
    scheme on PostgreSQL and the 'USERS' TABLESPACE_NAME on Oracle;
  * Minor improvement to set by default in all HTTP requests the standard
    HTTP headers (Accept, Accept-Encoding, etc);
  * Minor improvements to sqlmap Debian package files: sqlmap uploaded
    to official Debian project repository;
  * Minor bug fix to handle session.error and session.timeout in HTTP
    requests;
  * Minor bug fix so that when the user provide a SELECT statement to be
    processed with an asterisk as columns, now it also work if in the FROM
    there is no database name specified;
  * Minor bug fix to correctly dump table entries when the column is
    provided;

 -- Bernardo Damele A. G. <bernardo.damele@gmail.com>  Day,  X YYY 2008 10:00:00 +0000

sqlmap (0.6.2-1) stable; urgency=low

  * Major bug fix to correctly dump tables entries when --stop is not
    specified;
  * Major bug fix so that the users' privileges enumeration now works
    properly also on both MySQL < 5.0 and MySQL >= 5.0;
  * Major bug fix when the request is POST to also send the GET parameters
    if any have been provided;
  * Major bug fix to correctly update sqlmap to the latest stable release
    with command line --update;
  * Major bug fix so that when the expected value of a query (count
    variable) is an integer and, for some reasons, its resumed value from