@@ -182,15 +182,17 @@ class MySQLMap(Fingerprint, Enumeration, Filesystem, Takeover):
 
 
     def getFingerprint(self):
+        value  = "back-end DBMS: "
         actVer = formatDBMSfp()
 
         if not conf.extensiveFp:
-            return actVer
+            value += actVer
+            return value
 
-        comVer     = self.__commentCheck()
-        blank      = " " * 16
-        formatInfo = None
-        value      = "active fingerprint: %s" % actVer
+        comVer      = self.__commentCheck()
+        blank       = " " * 15
+        formatInfo  = None
+        value      += "active fingerprint: %s" % actVer
 
         if comVer:
             comVer = formatDBMSfp([comVer])
@@ -207,10 +209,10 @@ class MySQLMap(Fingerprint, Enumeration, Filesystem, Takeover):
             value += "\n%sbanner parsing fingerprint: %s" % (blank, banVer)
 
         #passiveFuzzing()
-        htmlParsed = getHtmlErrorFp()
+        htmlErrorFp = getHtmlErrorFp()
 
-        if htmlParsed:
-            value += "\n%shtml error message fingerprint: %s" % (blank, htmlParsed)
+        if htmlErrorFp:
+            value += "\n%shtml error message fingerprint: %s" % (blank, htmlErrorFp)
 
         if formatInfo:
             value += "\n%s" % formatInfo
